<resources>
    <string name="app_name">Trivia</string>
    <string name="trivia">Trivia</string>
    <string name="out_of_text">Question: 45/89</string>
    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="next_button">NEXT</string>
    <string name="placeholder">Actual text to be shown stored here.</string>
    <string name="correct_answer">Correct</string>
    <string name="incorrect">Incorrect</string>
</resources>